<resources>
    <string name="app_name">catch me if u can</string>
    <string name="login">login</string>
    <string name="Login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="click_to_register">click to register</string>
    <string name="click_to_login">click to Login</string>
    <string name="logout">logout</string>
    <string name="name">name</string>
    <string name="start">start</string>
</resources>